# backend/app/static/swagger.json
@@ -2115,6 +2115,7 @@
         },
         "/influxdb/alert": {
             "post": {
+                "tags": ["InfluxDB"],
                 "summary": "Create alert",
                 "description": "Endpoint to create alert.",
                 "requestBody": {
@@ -2123,67 +2124,55 @@
                             "schema": {
                                 "type": "object",
                                 "properties": {
-                                    "alert": {
-                                        "type": "object",
-                                        "properties": {
-                                            "check_id": {
-                                                "type": "string",
-                                                "description": "The ID of the check."
-                                            },
-                                            "message": {
-                                                "type": "object",
-                                                "properties": {
-                                                    "canonical_id": {
-                                                        "type": "string",
-                                                        "example": "c6a577585601e9ac17c949a33f73956ec7ee9f2ad1c4209d7e69dda819a62969"
-                                                    },
-                                                    "external_id": {
-                                                        "type": "string",
-                                                        "example": "29082"
-                                                    },
-                                                    "id": {
-                                                        "type": "string",
-                                                        "example": "4a29ffda-3efe-4418-b9a0-c4e40878b7c5"
-                                                    },
-                                                    "mailbox": {
-                                                        "type": "object",
-                                                        "properties": {
-                                                            "external_id": {
-                                                                "type": "string",
-                                                                "nullable": true
-                                                            },
-                                                            "id": {
-                                                                "type": "string",
-                                                                "example": "e921c909-e72a-4c9c-b56c-0dd59c7f49c3"
-                                                            }
-                                                        }
-                                                    },
-                                                    "message_source_id": {
-                                                        "type": "string",
-                                                        "example": "d4bc5aef-ee26-4c54-a43e-de5faa794575"
-                                                    }
-                                                }
-                                            },
-                                            "triggered_actions": {
-                                                "type": "array",
-                                                "items": {
-                                                    "type": "object",
-                                                    "properties": {
-                                                        "id": {
-                                                            "type": "string",
-                                                            "example": "2c16da90-6f79-496b-886a-bf382423762a"
-                                                        },
-                                                        "name": {
-                                                            "type": "string",
-                                                            "example": "Shuffle"
-                                                        },
-                                                        "type": {
-                                                            "type": "string",
-                                                            "example": "webhook"
-                                                        }
-                                                    }
-                                                }
-                                            }
+                                    "_check_name": {
+                                        "type": "string",
+                                        "description": "The name of the check."
+                                    },
+                                    "_message": {
+                                        "type": "string",
+                                        "description": "The alert message."
+                                    }
+                                },
+                                "required": ["_check_name", "_message"]
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successfully stored alert.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Successfully stored alert."
+                                        },
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid payload.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Invalid payload."
+                                        },
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": false
                                         }
                                     }
                                 }
